// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Metadata rendering 1`] = `
<DocumentFragment>
  <span
    data-component="HelmetWrapper"
    data-props="{
  \\"title\\": \\"Regexper\\",
  \\"htmlAttributes\\": {},
  \\"meta\\": [
    {
      \\"name\\": \\"description\\"
    }
  ]
}"
  />
</DocumentFragment>
`;

exports[`Metadata rendering with a title and description 1`] = `
<DocumentFragment>
  <span
    data-component="HelmetWrapper"
    data-props="{
  \\"title\\": \\"Regexper - Testing\\",
  \\"htmlAttributes\\": {},
  \\"meta\\": [
    {
      \\"name\\": \\"description\\",
      \\"content\\": \\"Test description\\"
    }
  ]
}"
  />
</DocumentFragment>
`;
